// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shorthand styles process basic definitions with shorthanded props 1`] = `
Object {
  ".circle": Object {
    "borderColor": "#fbfbfb",
    "borderStyle": "solid",
    "borderWidth": 5,
    "fontFamily": "Georgia, serif",
    "fontSize": 12,
    "fontStyle": "italic",
    "fontVariant": Array [
      "small-caps",
    ],
    "fontWeight": "500",
    "lineHeight": 30,
    "marginVertical": 55,
    "paddingHorizontal": 20,
  },
  "Component.name": Object {
    "borderColor": "#fbfbfb",
    "borderStyle": "solid",
    "borderWidth": 5,
    "fontFamily": "Georgia, serif",
    "fontSize": 12,
    "fontStyle": "italic",
    "fontVariant": Array [
      "small-caps",
    ],
    "fontWeight": "500",
    "lineHeight": 30,
    "marginVertical": 55,
    "paddingHorizontal": 20,
  },
}
`;

exports[`shorthand styles process pure style definition with shorthanded props 1`] = `
Object {
  "circle": Object {
    "alignSelf": "center",
    "borderBottomWidth": 1,
    "borderLeftWidth": 50,
    "borderRightWidth": 50,
    "borderTopWidth": 50,
    "fontFamily": "Georgia, serif",
    "fontSize": 12,
    "fontStyle": "italic",
    "fontVariant": Array [
      "small-caps",
    ],
    "fontWeight": "500",
    "lineHeight": 30,
  },
}
`;
